Subindo os resultados de Scala para 10000 processos em Threadring